# shazam-signature-jni

./: Cargo.toml  README.md
src/: lib.rs
src/fingerprinting/: algorithm.rs  signature_format.rs
