[package]
name = "shazam-signature-jni"
license = "GPL-3.0+"
keywords = ["shazam", "audio", "audio-fingerprinting"]
version = "0.0.1"
authors = ["alexmercerind"]
edition = "2018"

[lib]
crate_type = ["cdylib"]

[dependencies]
base64 = "0.12.3"
byteorder = "1.3.4"
chfft = "0.3.4"
crc32fast = "1.2.0"
jni = "0.21.1"
rand = "0.7.3"
regex = "1.5.4"
uuid = { version = "0.8.1", features = ["v4"] }
